--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -71,6 +71,7 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
+  letter-spacing: 0.02em;
   text-align: center;
   text-transform: uppercase;
   border-top: 1px solid $color-base-secondary;
