--- a/source/styles/blocks/user-nav.scss
+++ b/source/styles/blocks/user-nav.scss
@@ -74,6 +74,7 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
+    letter-spacing: 0.02em;
     text-transform: uppercase;
   }
 }
